force-app/main/default/objects/redwing__Related_Learning__c/redwing__Related_Learning__c.object-meta.xml
<CustomObject>
    <label>Related Learning</label>
    <nameField>
        <label>Related Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Learnings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>