force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Applicability__c.field-meta.xml
<CustomField>
    <fullName>redwing__Applicability__c</fullName>
    <inlineHelpText>Type of Required Learning assignments the Related Learning will be applied for.</inlineHelpText>
    <label>Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Assignments</fullName>
                <default>true</default>
                <label>New Assignments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>