force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Due_Date_Term__c.field-meta.xml
<CustomField>
    <fullName>redwing__Due_Date_Term__c</fullName>
    <inlineHelpText>Number of days/weeks/months/years for Due Date.</inlineHelpText>
    <label>Due Date Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>