force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Due_Date_Term_Basis__c.field-meta.xml
<CustomField>
    <fullName>redwing__Due_Date_Term_Basis__c</fullName>
    <inlineHelpText>Due Date term basis for Related Learning.</inlineHelpText>
    <label>Due Date Term Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>