force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required Learning Object.</inlineHelpText>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Related Learnings</relationshipLabel>
    <relationshipName>Related_Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>