force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Learning_Trac__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Trac__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required Learning Trac.</inlineHelpText>
    <label>Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Related Learnings</relationshipLabel>
    <relationshipName>Related_Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>