force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Related_Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Related_Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Learning Object.</inlineHelpText>
    <label>Related Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Related Learnings (Related Learning)</relationshipLabel>
    <relationshipName>Child_Related_Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>