force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Related_Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Related_Learning_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Learning Plan.</inlineHelpText>
    <label>Related Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Related Learnings (Related Learning Plan)</relationshipLabel>
    <relationshipName>Child_Related_Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>