force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Related_Learning_Trac__c.field-meta.xml
<CustomField>
    <fullName>redwing__Related_Learning_Trac__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Learning Trac.</inlineHelpText>
    <label>Related Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Related Learnings (Related Learning Trac)</relationshipLabel>
    <relationshipName>Child_Related_Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>