force-app/main/default/objects/redwing__Related_Learning__c/fields/redwing__Required_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Required_Status__c</fullName>
    <inlineHelpText>Status of Required Learning assignments the Related Learning will be applied for.</inlineHelpText>
    <label>Required Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Registered</fullName>
                <default>true</default>
                <label>All Registered</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>